[package]
name = "clisurf"
version = "0.1.0"
edition = "2021"

[dependencies]
colour = "0.3.0"
ureq = "2.0.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
mockito = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
